--- a/Source/WoWRegeneration/WoWRegeneration/WoWRegeneration.csproj
+++ b/Source/WoWRegeneration/WoWRegeneration/WoWRegeneration.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\WoW51016357.cs" />
+    <Compile Include="Repositories\WoW54818414.cs" />
     <Compile Include="Repositories\WoWRepository.cs" />
     <Compile Include="Repositories\RepositoriesManager.cs" />
     <Compile Include="Repositories\WoW434.cs" />
